<resources>
    <string name="app_name">CloudApp</string>
    <string name="password_txt_main_page">Password</string>
    <string name="username_hint">Email</string>
    <string name="main_activity_log_in_lbl">Log in</string>
    <string name="main_activity_reg_lbl">Register</string>
    <string name="main_activity_log_in_text">Log In</string>
    <string name="lbl_submit_register">Submit</string>
    <string name="hint_enter_name">Enter: Name</string>
    <string name="hint_enter_id">Enter: ID</string>
    <string name="hint_enter_age">Enter: Age</string>
    <string name="hint_enter_phone">Enter: Phone Number</string>
    <string name="profile_view_info_lbl">Profile Information</string>
    <string name="title_activity_mongo_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
