<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileEdit">


    <RelativeLayout
        android:id="@+id/editTextLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/blue"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">
        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/choosImg"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="choose image">
            </Button>
            <Button
                android:id="@+id/uploudImg"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="Upload">

            </Button>
        </LinearLayout>

        <ImageView
            android:id="@+id/Image"
            android:layout_below="@id/buttons"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            android:layout_width="180dp"
            android:layout_height="180dp">
        </ImageView>


        <EditText
            android:id="@+id/Name"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="#11000000"
            android:padding="10dp"
            android:layout_below="@id/Image"
            android:hint="@string/hint_enter_name"
            android:textColor="@android:color/black"
            android:inputType="textPersonName"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/ID"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="#11000000"
            android:padding="10dp"
            android:layout_below="@+id/Name"
            android:hint="@string/hint_enter_id"
            android:textColor="@android:color/black"
            android:inputType="textPersonName"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/Age"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:background="#11000000"
            android:textColor="@android:color/black"
            android:hint="@string/hint_enter_age"
            android:layout_below="@+id/ID"
            android:inputType="textPersonName"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="#11000000"
            android:layout_below="@+id/Age"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:hint="@string/hint_enter_phone"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/submitBTN"
            android:layout_width="200dp"
            android:layout_below="@id/PhoneNumber"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:background="@drawable/rec_gradient"
            android:text="@string/lbl_submit_register"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

</RelativeLayout>