<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".FirebaseMain">
    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/main_activity_log_in_lbl"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold">
    </TextView>

    <RelativeLayout
        android:id="@+id/editTextLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/blue"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <EditText
            android:id="@+id/editUser"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#11000000"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginBottom="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:hint="@string/username_hint"
            android:autofillHints="UserName" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/editUser"
            android:layout_centerHorizontal="true"
            android:background="#11000000"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:hint="@string/password_txt_main_page"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:autofillHints="Password" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_below="@id/editPassword">
            <Button
                android:id="@+id/regBTN"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/rec_gradient"
                android:text="@string/main_activity_reg_lbl"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/logBTN"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/rec_gradient"
                android:text="@string/main_activity_log_in_lbl"
                android:textColor="@android:color/white"/>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>